# secure-mcp-202510

./: .gitignore  README.md  auth_server.py  mcp_client.py  mcp_server.py
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  pyproject.toml
