[project]
name = "Secure-MCP"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
